// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders with default theme max-width 1`] = `
.c1 {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.c0 {
  max-width: 72rem;
}

<div
  className="c0 c1"
  width={1}
/>
`;

exports[`Container renders with maxWidth 1`] = `
.c1 {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.c0 {
  max-width: 32rem;
}

<div
  className="c0 c1"
  width={1}
/>
`;
